<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dicas.AbdominalActivity">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/button_bak_dicas"
        app:layout_constraintEnd_toStartOf="@id/text_name_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name_app"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="44dp"
        android:fontFamily="@font/cabin"
        android:padding="8dp"
        android:text="@string/my_gym"
        android:textColor="@color/brown_800"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_back"
        app:layout_constraintStart_toStartOf="@id/image_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phrase_habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/dicas_para_abdominais"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name_app"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linear_habits1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phrase_habit">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_habits2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_habits1">

        <ImageView
            android:id="@+id/image_borba"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_borba" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cabin"
        android:padding="16dp"
        android:text="@string/mantenha_a_forma"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_habits2" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:padding="16dp"
        android:text="@string/respire_corretamente"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_1" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:padding="16dp"
        android:text="@string/nao_se_apresse"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_2" />

</androidx.constraintlayout.widget.ConstraintLayout>